# shipyard-webgl-renderer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE-THIRD-PARTY  README.md  THIRD-PARTY-LICENSES  TODO.md
.github/workflows/: build.yml
crate/: Cargo.toml
crate/src/: base.rs  camera.rs  config.rs  constants.rs  debug.rs  error.rs  exr.rs  image.rs  init.rs  lib.rs  light.rs  prelude.rs  renderer.rs  tag.rs  util.rs  workload.rs
crate/src/animation/: clip.rs  clock.rs  mod.rs  systems.rs
crate/src/camera/: active.rs  arc_ball.rs  mod.rs  screen_static.rs  traits.rs
crate/src/camera/arc_ball/: controller.rs  data.rs  mod.rs
crate/src/camera/screen_static/: data.rs
crate/src/cubemap/: cubemap.rs  environment.rs  loader.rs  mod.rs  skybox.rs
crate/src/draw/: draw.rs
crate/src/entity/: entity.rs  spawn.rs  sprite.rs
crate/src/geom/: mod.rs
crate/src/gltf/: accessor.rs  animation.rs  component.rs  loader.rs  material.rs  mod.rs  populate.rs  primitive.rs  skin.rs  texture.rs
crate/src/input/: input.rs  listeners.rs  mod.rs  queue.rs  state.rs
crate/src/material/: cache.rs  kinds.rs  material.rs  mod.rs  program_cache.rs  shader_cache.rs  traits.rs
crate/src/material/_shaders/fragment/: debug-picker-blit.glsl  picker-opaque.glsl  picker-texture-alpha.glsl  render-composite.glsl  unlit-cube-color.glsl  unlit-diffuse.glsl
crate/src/material/fragment/: unlit-color.glsl
crate/src/material/materials/: color_picker_show.rs  cube.rs  mod.rs  sprite.rs
crate/src/material/materials/fragment/: color-picker-show.glsl  unlit-diffuse.glsl  unlit-flat-color.glsl
crate/src/material/picker/: cube.rs  mod.rs  picker_debug.rs  sprite.rs
crate/src/material/standard/: cube.rs  mod.rs  render_composite.rs  sprite.rs
crate/src/material/vertex/: cube-unit.glsl  quad-unit.glsl  unit.glsl
crate/src/mesh/: cache.rs  kinds.rs  mesh.rs  mod.rs  traits.rs
crate/src/mesh/geom/: quad.rs
crate/src/mesh/meshes/: cube.rs  mod.rs  quad.rs  sprite.rs
crate/src/picker/: color_picker.rs
crate/src/primitive/: mod.rs  primitive.rs
crate/src/render/: camera_ubo.rs  forward.rs  kinds.rs  mod.rs  render.rs
crate/src/render/buffers/: mod.rs  traits.rs
crate/src/render/buffers/draw/: blit.rs  composite.rs  draw.rs  mod.rs  textures.rs
crate/src/render/buffers/picker/: mod.rs  picker.rs
crate/src/render/passes/: deferred.rs  forward.rs  mod.rs  picker.rs
crate/src/render/systems/: mod.rs  picker.rs  render.rs
crate/src/renderer/: cleanup.rs  draw_buffers.rs  material.rs  mesh.rs  shaders.rs  systems.rs
crate/src/renderer/material/: pbr.rs  texture.rs
crate/src/renderer/shaders/: fragment.rs  vertex.rs
crate/src/renderer/shaders/common/: camera.glsl
crate/src/renderer/shaders/fragment/: mesh.frag  render-composite.glsl
crate/src/renderer/shaders/fragment/helpers/: light.glsl
crate/src/renderer/shaders/glsl/common/: camera.glsl  color_space.glsl  helpers.glsl  math.glsl
crate/src/renderer/shaders/glsl/fragment/: mesh-pbr.frag  mesh.frag  panorama_to_cubemap.frag  skybox.frag  unlit-diffuse.frag  vectors.glsl
crate/src/renderer/shaders/glsl/fragment/helpers/: vectors.glsl
crate/src/renderer/shaders/glsl/fragment/lighting/: light.glsl
crate/src/renderer/shaders/glsl/fragment/material/: colorspace.glsl  pbr-light.frag  pbr.frag
crate/src/renderer/shaders/glsl/fragment/material/pbr/data/: structs.glsl  uniforms.glsl  varyings.glsl
crate/src/renderer/shaders/glsl/fragment/material/pbr/fn/: ambient_occlusion.glsl  brdf.glsl  color.glsl  ibl.glsl  iridescence.glsl  light.glsl  material.glsl  misc.glsl  normal.glsl  tone_map.glsl  uvs.glsl
crate/src/renderer/shaders/glsl/vertex/: fullscreen-triangle.vert  mesh.vert  quad-full-screen.vert  quad-unit.vert  skybox.vert
crate/src/renderer/shaders/vertex/: mesh.vert
crate/src/shader/: init.rs
crate/src/system/: mod.rs  render.rs
crate/src/system/render/: forward.rs  mod.rs  render.rs
crate/src/texture/: texture.rs
crate/src/view/: mod.rs  resize.rs
crate/src/view/camera/: buffers.rs  camera.rs  mod.rs
demo/: Cargo.toml  github-deploy-patch.js  index.html  package-lock.json  package.json  prod-patch.js  rollup.js  tailwind.config.js
demo/public/: index.html
demo/src/: camera.rs  config.rs  lib.rs  light.rs  main.rs  prelude.rs  route.rs  world.rs
demo/src/gltf/: actions.rs  component.rs  id.rs  mod.rs
demo/src/ui/: dom.rs  mod.rs  state.rs
demo/src/ui/pages/gltf/: actions.rs  dom.rs  mod.rs  state.rs
demo/src/ui/pages/gltf/sidebar/: actions.rs  dom.rs  mod.rs  state.rs
demo/src/ui/pages/gltf/stage/: dom.rs  state.rs
demo/src/ui/pages/home/: actions.rs  dom.rs  state.rs
demo/src/ui/pages/home/sidebar/: dom.rs  state.rs
demo/src/ui/pages/home/stage/: dom.rs  state.rs
demo/src/ui/primitives/: mod.rs
demo/src/ui/primitives/button/: dom.rs  state.rs
demo/src/ui/primitives/checkbox/: dom.rs  state.rs
demo/src/ui/primitives/dropdown/: dom.rs  state.rs
demo/src/ui/primitives/image/: dom.rs  state.rs
demo/src/ui/primitives/input/: dom.rs  state.rs
demo/src/ui/primitives/overlay/: dom.rs  state.rs
demo/src/ui/primitives/range/: dom.rs  state.rs
demo/src/ui/primitives/table/: dom.rs  state.rs
demo/src/ui/primitives/tabs/: dom.rs  mod.rs  state.rs
example/: Cargo.toml  package-lock.json  package.json  rollup.dev.js
example/public/: index.html  styles.css
example/src/: lib.rs  prelude.rs
example/src/scene/: camera.rs  first_run.rs  init.rs  input.rs  mod.rs  objects.rs  resize.rs  scene.rs  tick.rs  workloads.rs
example/src/scene/entities/: cube.rs  mod.rs  sprite.rs
example/src/scene/events/: handlers.rs  mod.rs  queue.rs  systems.rs
example/src/types/: types.rs
example/src/ui/: app.rs  mod.rs  state.rs
example/src/ui/main/: main.rs  mod.rs
example/src/ui/sidebar/: border.rs  help.rs  mod.rs  render_mode.rs  select_mode.rs  sidebar.rs  tools.rs
example/src/utils/: path.rs
