[package]
name = "awsm_renderer"
edition = "2018"
version = "0.0.1"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/dakom/awsm-renderer"
description = "Wasm/WebGl renderer"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev"]

[dependencies]
shipyard = { git = "https://github.com/leudz/shipyard", branch = "no-panic-feature", features = ["non_send", "non_sync", "wasm"], default-features = false }
shipyard_scenegraph = { git = "https://github.com/dakom/shipyard-scenegraph", features = ["non_send", "non_sync", "nalgebra_math", "wasm"], default-features = false}
awsm_web = { version = "0.13.0", features = ["webgl", "loaders", "serde_iso", "dom"], default-features = false }
# awsm_web = { path = "../../awsm-web/crate", features = ["webgl", "loaders", "serde_iso", "dom"], default-features = false }
nalgebra-glm = "0.10.0"
nalgebra = "0.24"
gloo-events = "0.1.1"
log = "0.4.11"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3.46"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "console",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "DomRect", 
    "Element",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
]
[features]
quiet = []
