[package]
name = "awsm_renderer"
edition = "2021"
version = "0.0.1"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/dakom/awsm-renderer"
description = "Wasm/WebGl renderer"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev"]


[dependencies]
shipyard = { version = "^0.6", default-features = false, features = ["proc","thread_local" ] }
shipyard_scenegraph = { version = "^0.6", default-features = false, features = ["nalgebra_glm_math"]}
nalgebra-glm = "0.17.0"
nalgebra = "0.31.1"
awsm_web = { version = "0.37.0", features = ["webgl", "loaders", "serde_iso"], default-features = false }
serde = "1.0.144"
serde_json = "1.0.85"
cfg-if = "1.0.0"
log = "0.4.17"
derive_deref = "1.1.1"
futures = "0.3.24"
once_cell = "1.14.0"
anyhow = "1.0.63"
thiserror = "1.0.33"
gltf = "1.0.0"
libm = "0.2.5"
rustc-hash = "1.1.0"
beach_map = "0.2.1"

# [patch.crates-io]
# shipyard = { version = "^0.3", features = ["proc", "non_send", "non_sync"], default-features = false}

[dependencies.web-sys]
version = "0.3.59"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Performance",
    "KeyboardEvent",
    "WheelEvent",
    "WebSocket",
]
[features]
default = []
remote-media = []
dev = ["awsm_web/unwrap_verbose"]
