[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
awsm_renderer = { path = "../crate" }
shipyard = { version = "^0.6", default-features = false, features = ["proc","thread_local" ] }
shipyard_scenegraph = { version = "^0.6", default-features = false, features = ["nalgebra_glm_math"]}
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
wasm-bindgen-futures= "0.4.32"
gloo-events = "0.1.2"
gloo-timers = { version = "0.2.4", features = ["futures"] }
serde = "1.0.144"
serde_json = "1.0.85"
wasm-logger = { version = "0.2.0", optional = true }
cfg-if = "1.0.0"
log = "0.4.17"
nalgebra-glm = "0.17.0"
nalgebra = "0.31.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
futures = "0.3.24"
dominator = "0.5.28"
futures-signals = "0.3.30"
awsm_web = { version = "0.37.0", features = ["loaders", "dom", "tick", "serde_iso", "webgl"], default-features = false }
once_cell = "1.14.0"
serde-wasm-bindgen = "0.4.3"
dominator_helpers = "0.7.2"
chrono = "0.4.22"
anyhow = "1.0.63"

[dependencies.web-sys]
version = "0.3.59"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "UrlSearchParams",
    "Node",
    "Window",
    "Performance",
    "KeyboardEvent",
    "WheelEvent",
    "WebSocket",
]
[features]
default = []
dev = ["wasm-logger", "console_error_panic_hook","awsm_web/unwrap_verbose", "awsm_renderer/dev"]
