[package]
name = "demo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
# Awsm
awsm_renderer = { path = "../crate"}
# awsm_web = { version = "0.13.0", features = ["tick", "webgl", "loaders", "audio", "serde_iso"], default-features = false }

awsm_web = { path = "../../awsm-web/crate", features = ["webgl", "loaders", "serde_iso", "dom", "tick"], default-features = false }

shipyard = { git = "https://github.com/leudz/shipyard", branch = "no-panic-feature", features = ["non_send", "non_sync", "wasm", "serde1"], default-features = false }
shipyard_scenegraph = { git = "https://github.com/dakom/shipyard-scenegraph", features = ["non_send", "non_sync", "nalgebra_math", "wasm"], default-features = false}
nalgebra = { version = "0.24.0", default-features = false, features = ["libm"] }

# Setup / Logging
cfg-if = "1.0.0"
log = "0.4.11"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasm-logger = { version = "0.2.0", optional = true }

# Dominator
dominator = "0.5.14"
futures-signals = "0.3.16"

# Wasm-Bindgen
wasm-bindgen = "0.2.69"
js-sys = "0.3.46"

# Misc
wasm-bindgen-futures= "0.4.19"
gloo-events = "0.1.1"

# Web-Sys
[dependencies.web-sys]
version = "0.3.46"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Performance",

]

[features]
quiet = ["awsm_renderer/quiet"]
default = ["wee_alloc"]
dev = ["quiet", "wee_alloc", "wasm-logger", "console_error_panic_hook"]
